--- a/document/Algorithm/공지-0919.md
+++ b/document/Algorithm/공지-0919.md
@@ -1,12 +1,87 @@
-09/24 휴강 - 온라인 보강
-중간 고사 일정 - 11/03 월요일 19시
-기말 시험 일정 12/10 수요일 - 12/08 월요일 저녁 7시 30분
+# 09/19 공지 정리 및 확장
 
-리트머스 과제 
-- MergeSort
-- QuickSort
-- CountingSort
+## 1. 휴강 및 보강
+- 09/24 (수) 휴강 → 온라인 보강 예정
+  - 보강 형태: 사전 녹화 영상 또는 라이브(추후 확정)
+  - 권장: 영상 시청 후 정렬 알고리즘 복습(Heap, Merge, Quick, Counting, Radix)
 
-- 여러 번 답안 제출 가능
-- 리트머스 시스템 표절 검사 기능
-- 부분 점수 채점
+## 2. 시험 일정
+| 구분 | 일시 | 비고 |
+|------|------|------|
+| 중간고사 | 11/03 (월) 19:00 | 범위: 1주차 ~ 중간 직전 (정렬/자료구조 기초) |
+| 기말고사(표기 혼선) | 12/08 (월) 19:30 | 최초 표기 12/10(수) → 일정 조정 가능성 언급 |
+| (기존 기말 표기) | 12/10 (수) 19:00 | 정확한 확정 공지 추후 재확인 필요 |
+
+> 기말 일정이 12/08 vs 12/10 로 혼재 표기되어 있어, 강의실/학과 최종 공지를 반드시 재확인할 것.
+
+### 시험 준비 체크리스트 (중간)
+- [ ] 정렬 알고리즘 시간/공간 복잡도 암기
+- [ ] 안정 정렬 vs 비안정 정렬 구분
+- [ ] 힙 구성 O(n) 증명 개요 설명 가능
+- [ ] QuickSort 분할 전략 & 최악 사례(이미 정렬된 입력 등)
+- [ ] Counting/Radix 적용 조건 (값 범위, 자릿수)
+
+### 시험 준비 체크리스트 (기말, 예상)
+- [ ] 고급 정렬 변형(Timsort, IntroSort) 개념 메모
+- [ ] 해시 충돌 해결 방식(Chaining, Open Addressing)
+- [ ] 트리 회전(BST → AVL or Red-Black 추상 개념)
+- [ ] 그래프 탐색 기본(BFS/DFS) 시간 복잡도
+
+## 3. 리트머스(Litmus) 온라인 과제
+### 과제 목록
+1. MergeSort
+2. QuickSort
+3. CountingSort
+
+### 시스템 특징
+- 다회 제출 가능 (최적화/리팩터링 반복 허용)
+- 표절(유사도) 검사 활성화 → 변수명 단순 변경 수준 회피 불가
+- 부분 점수 채점: 일부 테스트 통과 시 해당 비율 점수 반영
+
+### 권장 제출 전략
+| 단계 | 설명 | 팁 |
+|------|------|----|
+| 1 | 올바른 기본 구현 | 가장 먼저 정확성 확보 |
+| 2 | 비정상 입력 처리(필요 시) | 문제 명세 범위 밖이면 생략 |
+| 3 | 경계 테스트 | 빈 배열, 원소 1개, 중복 다수 |
+| 4 | 성능 점검 | 큰 입력(n=10^5 이상) 시간 확인 |
+| 5 | 코드 정리 | 함수 분리, 주석 최소/핵심화 |
+
+### 표절 방지 간단 가이드
+- 직접 로직 작성 (특히 Partition, Merge 루프)
+- 임시 배열/인덱스 변수 명 직관적 사용 (`left`, `mid`, `pivotIdx` 등)
+- 주석: “왜” 중심 (예: ‘pivot 재배치 후 왼/오 분할 확정’)
+
+### 디버깅 체크포인트
+| 알고리즘 | 흔한 실수 | 점검 방법 |
+|----------|-----------|-----------|
+| MergeSort | Merge 단계 인덱스 범위 오류 | 소규모 배열(길이 2~5) 추적 |
+| QuickSort | Pivot 고정 후 중복 값 무한 루프 | 중복 pivot 값 처리분기 확인 |
+| CountingSort | 누적합 off-by-one | 누적 배열 출력 검증 |
+
+## 4. 주간 학습 제안 (09/19~09/24)
+| Day | 추천 학습 | 산출물 |
+|-----|-----------|---------|
+| D1 | Heap Insert/Delete 연습 | 손코딩 2회 |
+| D2 | MergeSort Top-Down → Bottom-Up 비교 | 시간/공간 장단 표 작성 |
+| D3 | QuickSort Pivot 전략 3종(첫/중앙/Median-of-Three) 실험 | 실행 시간 로그 |
+| D4 | Counting vs Radix 예제 구현 | 입력 3세트 결과 캡처 |
+| D5 | 기출/유형 문제 5문항 풀이 | 해설 메모 |
+
+## 5. Q&A 예상
+| 질문 | 핵심 답변 키워드 |
+|------|------------------|
+| CountingSort 언제 사용? | 값 범위 작고 정수형, O(n+k) |
+| RadixSort 안정 필요 이유? | 자릿수 누적 순서 유지 |
+| Heapify O(n) 직관? | 낮은 레벨 노드 많지만 높이 작음 |
+| QuickSort 최악 회피? | 랜덤 피벗, Median-of-Three |
+
+## 6. 액션 아이템 요약
+- [ ] 시험 일정 최종 공지 재확인 (특히 기말)
+- [ ] Litmus 기본 구현 1차 제출 (이번 주 내)
+- [ ] Counting/Radix 예제 손 코딩 1회
+- [ ] Heapify O(n) 증명 스케치 암기
+- [ ] QuickSort 분할 루프 Dry-run 3회
+
+---
+(End of 09/19 공지 확장)
