--- a/document/Algorithm/공지.md
+++ b/document/Algorithm/공지.md
@@ -1,12 +1,73 @@
-## 휴강
-- 다음 주 수요일 09/24 (수)
-- 10/10 (금) 학교 정전
-- 10/15 (수) ㅠ
+# 강의 공지 종합 (초기 메모 확장)
 
-## 시험
-### 중간 고사 일정
-11/03 19:00
+## 1. 휴강 / 변동 일정
+| 날짜 | 사유 | 비고 |
+|------|------|------|
+| 09/24 (수) | 휴강 | 온라인 보강(영상/라이브 추후 공지) |
+| 10/10 (금) | 학교 정전 | 실습/서버 접근 이슈 가능 → 로컬 환경 준비 |
+| 10/15 (수) | (사유 미기재) 휴강 표기 | 보강 일정 별도 확인 필요 |
 
-### 기말 고사 일정
-12/10 19:00
+### 일정 관리 체크
+- [ ] 온라인 보강 업로드 확인
+- [ ] 10/10 전 과제/코드 로컬 백업
+- [ ] 10/15 보강 여부 학과 게시판 재확인
 
+## 2. 시험 일정
+| 구분 | 예정 일시 | 확정 상태 | 범위(예상) |
+|------|-----------|-----------|------------|
+| 중간 | 11/03 19:00 | (가안) | 기초 자료구조 + 기본 정렬 (Selection~Heap) |
+| 기말 | 12/10 19:00 | (가안) | 고급 정렬, 해시, 트리, 그래프 기본 |
+
+> 기말 일정은 다른 공지(09/19 확장 문서)와 혼선 존재 가능. 학기 중반 재확인 필수.
+
+### 시험 준비 핵심
+| 항목 | 중간 대비 | 기말 대비 |
+|------|-----------|-----------|
+| 정렬 알고리즘 | 구현/복잡도/안정성 여부 | 최적화·응용·하이브리드(Timsort, Intro) 개요 |
+| 자료구조 | 배열, 리스트, 스택/큐 | 트리 균형/그래프 탐색/해시 충돌 |
+| 증명 감각 | Heapify O(n) | 해시 기대 O(1), 탐색 경로 길이 |
+
+## 3. 학습 권장 루틴 (주간)
+| Day | 목표 | 산출물 |
+|-----|------|--------|
+| Mon | Heap / Merge 복습 | 손코딩 2회, 주석 정리 |
+| Tue | Quick 분할 전략 비교 | 실행 시간 표 |
+| Wed | Counting / Radix 실습 | 테스트 입력 3세트 결과 |
+| Thu | 버킷 / 계수 변형 조사 | 비교 표 1장 |
+| Fri | 요약 & 플래시카드 제작 | 15~20문항 카드 |
+
+## 4. 체크리스트 통합
+- [ ] 모든 정렬 Big-O 표 암기
+- [ ] Stable / In-place 구분 예시 5쌍 말하기
+- [ ] QuickSort 최악 사례 말로 설명 가능
+- [ ] Heapify 코드 손으로 써보기 (오타 없이)
+- [ ] Counting → Radix 연결점 설명 (자릿수 빈도 → 누적 → 위치)
+- [ ] 시험 일정 최신화 캘린더 반영
+
+## 5. 자주 틀리는 포인트 메모
+| 주제 | 혼동 사례 | 정정 |
+|------|-----------|------|
+| Radix 안정성 | ‘안정 없어도 될 듯?’ | 각 자릿수 순서 누적 유지 필수 |
+| Heap vs PriorityQueue | 구현 = 동일 개념? | Heap은 구현 구조, PQ는 ADT |
+| MergeSort 공간 | In-place? | 기본 구현 추가 배열 O(n) |
+| QuickSort 공간 | O(1)? | 평균 재귀 스택 O(log n) |
+| CountingSort 범위 | 값 크면 비효율성 간과 | k 커지면 메모리/시간 동시 증가 |
+
+## 6. 추가 권장 자료
+| 범주 | 자료 | 목적 |
+|------|------|------|
+| Visualization | VisuAlgo / Algorithm Visualizer | Heapify, Partition 직관 강화 |
+| Discussion | StackOverflow ‘stable vs unstable sort’ | 개념 분리 문장화 |
+| Proof Sketch | CLRS Chapter 6 (Heap) | 높이별 비용 합산 감 잡기 |
+
+## 7. 향후 액션 (Next Action)
+| 우선도 | 할 일 | 마감(내부) |
+|--------|-------|-----------|
+| High | Litmus 과제 1차 제출 | 이번 주 금요일 |
+| High | 휴강/보강 최종 캘린더 정리 | 09/24 전 |
+| Medium | Radix/Counting 실습 Notebook 작성 | 다음 주 초 |
+| Medium | QuickSort 피벗 전략 벤치 | 중간 2주 전 |
+| Low | 추가 하이브리드 정렬 조사 | 여유 시 |
+
+---
+(End of 공지 확장)
